--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<img src="/images/celestin.jpg" alt="Image not found">
+<img src="celestin.jpg" alt="Image not found">
 </body>
 </html>
