Adding image profile

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>My Homepage</title>
 </head>
 <body>
-<img src="celestin.jpg" alt="Image not found">
+<img src="celestin.jpg" width="20%" height="20%" alt="Image not found">
 </body>
 </html>
