Adding new image profile

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My Homepage</title>
 </head>
 <body>
+<img src="celestin.jpg" height="1200" width="1600"/>
 <img src="celestin.jpg" width="20%" height="20%" alt="Image not found">
-http://localhost:63342/wap/index.html?_ijt=sgjh8fsb9iakf1dl0gbiimhjte
 </body>
 </html>
