--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
     <title>My Homepage</title>
 </head>
 <body>
-<img src="celestin.jpg" height="1200" width="1600"/>
-<img src="celestin.jpg" width="20%" height="20%" alt="Image not found">
+<img src="celestin.jpg" height="20%" width="20%"/>
+<h1>Celestin Mbuyamba</h1>
+<ul>
+    <li>Lab0: This Homepage</li>
+    <li><a href="#">Homework 1: Grandma's Lemon Meringue Pie</a></li>
+    <li><a href="#">Homework 2: Movie Review</a></li>
+    <li><a href="#">Lab 3: My Music Page</a></li>
+    <li><a href="#">Homework 3: Movie Review PHP</a></li>
+    <li><a href="#">Homework 4: NerdLuv</a></li>
+    <li><a href="#">Homework 5: NerdLuv DB</a></li>
+    <li><a href="#">Homework 6: NerdLuv Session</a></li>
+    <li><a href="#">Final Project</a></li>
+</ul>
+<p>
+    <a href="https://validator.w3.org/check/referer">
+        <img src=http://mumstudents.org/cs472/2013-09/images/w3c-html.png alt="Validate" />
+    </a>
+</p>
 </body>
 </html>
