--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My Homepage</title>
 </head>
 <body>
-<img src="celestin.jpg" height="20%" width="20%"/>
+<img src="celestin.jpg" height="270" width="360" alt="No profile image"/>
 <h1>Celestin Mbuyamba</h1>
 <ul>
     <li>Lab0: This Homepage</li>
