Final project / last corrections

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>My Homepage</title>
 </head>
 <body>
-<img src="celestin.jpg" height="270" width="360" alt="No profile image"/>
+<img src="/images/celestin.jpg" height="270" width="360" alt="No profile image"/>
 <h1>Celestin Mbuyamba</h1>
 <ul>
-    <li>Lab0: This Homepage</li>
+    <li>Lab 0: This Homepage</li>
+    <li><a href="#">Lab 1: About Me</a></li>
     <li><a href="#">Homework 1: Grandma's Lemon Meringue Pie</a></li>
     <li><a href="#">Homework 2: Movie Review</a></li>
     <li><a href="#">Lab 3: My Music Page</a></li>
@@ -20,7 +21,7 @@
 </ul>
 <p>
     <a href="https://validator.w3.org/check/referer">
-        <img src=http://mumstudents.org/cs472/2013-09/images/w3c-html.png alt="Validate" />
+        <img src="/images/w3c-html.png" alt="Validate" />
     </a>
 </p>
 </body>
