--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My Homepage</title>
 </head>
 <body>
-<img src="/images/celestin.jpg" height="270" width="360" alt="No profile image"/>
+<img src="images/celestin.jpg" alt="No profile image"/>
 <h1>Celestin Mbuyamba</h1>
 <ul>
     <li>Lab 0: This Homepage</li>
@@ -21,7 +21,7 @@
 </ul>
 <p>
     <a href="https://validator.w3.org/check/referer">
-        <img src="/images/w3c-html.png" alt="Validate" />
+        <img src="images/w3c-html.png" alt="Validate" />
     </a>
 </p>
 </body>
