Final project / last corrections

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Homepage</title>
+    <title>Lab01 - HTML on mumstudents.org</title>
 </head>
 <body>
 <img src="images/celestin.jpg" alt="No profile image"/>
