Final project / last corrections Correcting images locations using root relative

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Lab01 - HTML on mumstudents.org</title>
 </head>
+
 <body>
-    <img src="images/celestin.jpg" alt="No profile image"/>
+    <img src="/images/celestin.jpg" alt="No profile image"/>
     <h1>Celestin Mbuyamba</h1>
     <ul>
         <li>Lab 0: This Homepage</li>
@@ -21,7 +22,7 @@
     </ul>
     <p>
         <a href="https://validator.w3.org/check/referer">
-            <img src="images/w3c-html.png" alt="Validate"/>
+            <img src="/images/w3c-html.png" alt="Validate"/>
         </a>
     </p>
 </body>
