--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
 <body>
     <img src="/images/celestin.jpg" alt="No profile image"/>
-    <h1>Celestin Mbuyamba</h1>
+    <h2>Celestin Mbuyamba</h2>
     <ul>
         <li>Lab 0: This Homepage</li>
-        <li><a href="#">Lab 1: About Me</a></li>
+        <li><a href="aboutme.html">Lab 1: About Me</a></li>
         <li><a href="#">Homework 1: Grandma's Lemon Meringue Pie</a></li>
         <li><a href="#">Homework 2: Movie Review</a></li>
         <li><a href="#">Lab 3: My Music Page</a></li>
