Grandma's Lemon Meringue Pie html and css

--- a/aboutme.html
+++ b/aboutme.html
@@ -4,10 +4,32 @@
     <title>About me</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/aboutme.css">
 </head>
 <body>
     <h1>About Celestin Mbuyamba</h1>
-    <br/>
-    My name is Celestin, and I am tall, very kind and always smiling. I love humor.
+    My name is Celestin, and I am <strong>tall</strong>, <strong>very kind</strong> and always <strong>smiling</strong>. I love <strong>humor</strong>.
+    <hr/>
+    <h2>My classes this quarter are</h2>
+    <ul>
+        <li>CS472 - Web Programming	April (April 2019 by <em>Xing</em>)</li>
+        <li>CS572 - Modern Web Applications (May 2019 by <em>Saad</em>)</li>
+        <li>CS435 - Algorithms (June 2019  by <em>Khan</em>)</li>
+        <li>CS544 - Enterprise Architecture (July 2019 by <em>Salek</em>)</li>
+    </ul>
+    <h2>My favorites movies</h2>
+    <em>I really like watch movies about catholic religion, Africa histories like the ones below</em>
+    <ol>
+        <li>Black Panther (<a href="https://www.imdb.com/title/tt1825683/">IMDB</a>)</li>
+        <li>Angels and demons (<a href="https://www.imdb.com/title/tt0808151/">IMDB</a>)</li>
+        <li>Le crocodile du Botswanga (<a href="https://www.imdb.com/title/tt2969776//">IMDB</a>)</li>
+    </ol>
+    <h2>My Moods</h2>
+    <span>Happy</span><img src="images/happy.jpg" alt="Happy"/><span>Sad</span><img src="images/sad.jpg" alt="Sad"/>
+    <h2>Something about my neighbors</h2>
+    <ul>
+        <li>Daniel Rubambura: is the future DRC big <em>developer</em></li>
+        <li>Frederic Engo: is the future <em>web designer</em> in my country</li>
+    </ul>
 </body>
 </html>
