--- a/pie.html
+++ b/pie.html
@@ -102,7 +102,7 @@ Copyright &copy; 2019 Granny's Pies
                     <a href="https://validator.w3.org/check?uri=referer">
                         <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="Valid HTML5"/>
                     </a>
-                    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                    <a href="https://jigsaw.w3.org/css-validator/check/referer">
                         <img src="http://mumstudents.org/cs472/2014-09/images/w3c-css.png" alt="Valid CSS!"/>
                     </a>
                 </p>
