--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     <title>About me</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/aboutme.css">
+    <link href="css/styleme.css" rel="stylesheet">
 </head>
 <body>
     <h1>About Celestin Mbuyamba</h1>
@@ -31,5 +31,13 @@
         <li>Daniel Rubambura: is the future DRC big <em>developer</em></li>
         <li>Frederic Engo: is the future <em>web designer</em> in my country</li>
     </ul>
+    <p>
+        <a href="https://validator.w3.org/check?uri=referer">
+            <img alt="Valid HTML5" src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"/>
+        </a>
+        <a href="https://jigsaw.w3.org/css-validator/check/referer">
+            <img alt="Valid CSS!" src="http://mumstudents.org/cs472/2014-09/images/w3c-css.png"/>
+        </a>
+    </p>
 </body>
 </html>
