--- a/pie.html
+++ b/pie.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+In this Homework I added extra features 1, 2, 3 & 4
+-->
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -9,7 +12,7 @@
     <body>
         <div>
             <div>
-                <h2>Grandma's Lemon Meringue Pie</h2>
+                <h1>Grandma's Lemon Meringue Pie</h1>
                 <img src="images/pie.jpg" alt="No image"/>
                 <br/>
                 <br/>One 9-inch pie
@@ -20,7 +23,7 @@
                 <hr/>
             </div>
             <div>
-                <h3>INGREDIENTS</h3>
+                <h2>INGREDIENTS</h2>
                 <ul>
                     <li>1 cup white sugar</li>
                     <li>2 <abbr title="tablespoons">tbsp</abbr> all-purpose flour</li>
@@ -37,7 +40,7 @@
                 <hr/>
             </div>
             <div>
-                <h3>DIRECTIONS</h3>
+                <h2>DIRECTIONS</h2>
                 <ol>
                     <li><strong>Preheat Oven</strong>: Preheat oven to 350 degrees F (175 degrees C).</li>
                     <li><strong>Make Lemon Filling</strong>: In a medium saucepan ...
@@ -68,7 +71,7 @@
                 <hr/>
             </div>
             <div>
-                <h3>USER COMMENTS</h3>
+                <h2>USER COMMENTS</h2>
                 <blockquote>
                     <p>This is a very fun recipe to follow, because Grandma makes it sweet and simple.
                         This pie is thickened with cornstarch and flour in addition to egg yolks, and contains no milk.
@@ -76,8 +79,8 @@
                     <p>- Emilie S.</p>
                 </blockquote>
                 <blockquote>
-                    <p>Q: What do you call an ape who loves pie?</p>
-                    <p>A: A meringue-utan.</p>
+                    <p>Q: What do you call an ape who loves pie?
+                        <br/>A: A meringue-utan.</p>
                     <p>- Vickie K.</p>
                 </blockquote>
                 <blockquote>
@@ -87,7 +90,7 @@
                 </blockquote>
             </div>
             <div>
-                <h3>LINKS</h3>
+                <h2>LINKS</h2>
                 <a href="https://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search for other lemon meringue pie recipes</a>
                 <br/>
                 <a href="index.html">Home</a>
