About me page completed

--- a/pie.html
+++ b/pie.html
@@ -79,8 +79,7 @@ In this Homework I added extra features 1, 2, 3 & 4
                     <p>- Emilie S.</p>
                 </blockquote>
                 <blockquote>
-                    <p>Q: What do you call an ape who loves pie?
-                        <br/>A: A meringue-utan.</p>
+                    <p>Q: What do you call an ape who loves pie?<br/>A: A meringue-utan.</p>
                     <p>- Vickie K.</p>
                 </blockquote>
                 <blockquote>
