Forms task list

--- a/pie.html
+++ b/pie.html
@@ -6,7 +6,7 @@ In this Homework I added extra features 1, 2, 3 & 4
     <head>
         <meta charset="UTF-8">
         <title>Grandma's Lemon Meringue Pie</title>
-        <link rel="stylesheet" href="css/recipe.css">
+        <link href="css/recipe.css" rel="stylesheet" type="text/css">
         <link rel="icon" href="images/pie_icon.gif" type="image/gif">
     </head>
     <body>
@@ -94,7 +94,7 @@ In this Homework I added extra features 1, 2, 3 & 4
                 <br/>
                 <a href="index.html">Home</a>
             </div>
-            <div>
+            <div id="footer">
                 <pre id="copyright">
 Copyright &copy; 2019 Granny's Pies
     A Granny's Pies Production
