--- a/form/tasklist.html
+++ b/form/tasklist.html
@@ -28,7 +28,7 @@
             </div>
             <div>
                 <input id="submit" name="save" type="submit" value="Save task"/>
-                <input id="submit" name="reset" type="reset" value="Reset task"/>
+                <input id="reset" name="reset" type="reset" value="Reset task"/>
             </div>
             <div>
                 <table>
