--- a/lab3/tmnt.html
+++ b/lab3/tmnt.html
@@ -226,12 +226,12 @@
     <p>
         <a href="https://validator.w3.org/check/referer">
             <img alt="Validate"
-                 src=http://mumstudents.org/cs472/2013-09/images/w3c-html.png/>
+                 src="images/w3c-html.png"/>
         </a></p>
 
     <p>
         <a href="https://jigsaw.w3.org/css-validator/check/referer">
-            <img alt="Valid CSS!" src=http://jigsaw.w3.org/css-validator/images/vcss/>
+            <img alt="Valid CSS!" src="images/w3c-css.png"/>
         </a>
     </p>
 </div>
