Lab 7 : add https

--- a/lab6/decoratemytext.html
+++ b/lab6/decoratemytext.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Text Decorator</title>
     <link href="decoratemytext.css" rel="stylesheet" type="text/css"/>
     <script src="decoratemytext.js"></script>
