--- a/lab6/test.html
+++ b/lab6/test.html
@@ -23,5 +23,9 @@
 <body>
 <button id="clickbtn">Click me!</button>
 <span id="output"></span>
+<div class="foo bar" id="main">
+    <p>Hello, <em>very</em> happy to see you!</p>
+    <img alt="GREAT WALL" id="icon" src="greatwall.jpg"/>
+</div>
 </body>
 </html>
