--- a/form/tasklist.html
+++ b/form/tasklist.html
@@ -6,7 +6,7 @@
     <link href="tasklist.css" rel="stylesheet">
 </head>
 <body>
-<form action="#">
+<form action="?test=1&k=6">
     <div id="container">
         <div id="title">Task list</div>
         <div id="data">
