--- a/lab7/ascii.html
+++ b/lab7/ascii.html
@@ -46,12 +46,12 @@
     </fieldset>
 </div>
 <div id="validate">
-    <a href="http://validator.w3.org/check/referer">
+    <a href="https://validator.w3.org/check/referer">
         <img alt="html validator" src="w3c-html.png">
     </a><br>
-    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+    <a href="https://jigsaw.w3.org/css-validator/check/referer">
         <img alt="Valid CSS!" src="vcss.gif"></a><br>
-    <a href="http://webster.cs.washington.edu/jslint?referer">
+    <a href="https://webster.cs.washington.edu/jslint?referer">
         <img alt="JavaScript Lint" src="jslint.png">
     </a>
 </div>
