--- a/lab9/maze.html
+++ b/lab9/maze.html
@@ -13,7 +13,7 @@ You should download this file for your lab, but you should not edit its contents
     <script src="jquery-3.3.1.min.js"></script>
 
     <!-- your code -->
-    <script src="js/maze.js" type="text/javascript"></script>
+    <script src="maze.js" type="text/javascript"></script>
 </head>
 
 <body>
